--- a/index.html
+++ b/index.html
@@ -3,195 +3,263 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>MusicVerse - Song Submission Platform</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <!-- Firebase SDK -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js"></script>
+  <title>EventPass - Local Events Ticketing</title>
+  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.14.1/firebase-database-compat.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <style>
+    /* Custom Tailwind styles for teal and coral theme */
+    .bg-offwhite { background-color: #f9fafb; }
+    .text-teal { color: #2dd4bf; }
+    .bg-teal { background-color: #2dd4bf; }
+    .hover\:bg-coral:hover { background-color: #f87171; }
+    .border-teal { border-color: #2dd4bf; }
+    .bg-event-card { background-color: #ccfbf1; }
+    .text-dark-teal { color: #0f766e; }
+    .gradient-text {
+      background: linear-gradient(90deg, #2dd4bf, #f87171);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+    }
+
+    /* Animations */
+    .slide-in {
+      opacity: 0;
+      transform: translateX(-20px);
+      animation: slideIn 0.5s ease-out forwards;
+    }
+    @keyframes slideIn {
+      to { opacity: 1; transform: translateX(0); }
+    }
+    .event-card {
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      border-radius: 12px;
+    }
+    .event-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+    }
+    .btn-bounce {
+      transition: transform 0.2s ease-in-out;
+    }
+    .btn-bounce:hover {
+      transform: scale(1.1) translateY(-2px);
+    }
+    .bg-gradient {
+      background: linear-gradient(45deg, #ccfbf1, #f9fafb, #fce7e7);
+      background-size: 200%;
+      animation: gradientShift 15s ease infinite;
+    }
+    @keyframes gradientShift {
+      0% { background-position: 0% 50%; }
+      50% { background-position: 100% 50%; }
+      100% { background-position: 0% 50%; }
+    }
+
+    /* Navbar */
+    .navbar {
+      transition: all 0.3s ease;
+      border-radius: 0 0 12px 12px;
+    }
+    .nav-menu {
+      transition: max-height 0.4s ease-in-out;
+    }
+    @media (max-width: 768px) {
+      .nav-menu {
+        max-height: 0;
+        overflow: hidden;
+      }
+      .nav-menu.open {
+        max-height: 300px;
+      }
+    }
+  </style>
 </head>
-<body class="bg-gray-100">
-  <div id="app" class="container mx-auto p-4">
-    <!-- Header -->
-    <div class="flex justify-between items-center mb-8">
-      <h1 class="text-3xl font-bold">MusicVerse</h1>
-      <div>
-        <button id="signInBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600 hidden">Sign In with Google</button>
-        <button id="signOutBtn" class="bg-red-500 text-white px-4 py-2 rounded hover:bg-red-600 hidden">Sign Out</button>
-        <span id="userInfo" class="text-gray-700"></span>
+<body class="bg-offwhite text-dark-teal min-h-screen bg-gradient">
+  <!-- Navigation Bar -->
+  <nav class="navbar bg-teal text-white fixed top-0 w-full shadow-lg z-10">
+    <div class="container mx-auto px-6 py-4 flex justify-between items-center">
+      <h1 class="text-2xl font-bold gradient-text">EventPass</h1>
+      <button id="navToggle" class="md:hidden focus:outline-none">
+        <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+        </svg>
+      </button>
+      <div id="navMenu" class="nav-menu hidden md:flex space-x-6 items-center">
+        <a href="#" class="hover:text-coral transition duration-200">Home</a>
+        <a href="#eventsContainer" class="hover:text-coral transition duration-200">Events</a>
+        <a href="#about" class="hover:text-coral transition duration-200">About</a>
       </div>
     </div>
+  </nav>
 
-    <!-- Song Upload Form -->
-    <div id="uploadSection" class="mb-8 p-4 bg-white rounded-lg shadow hidden">
-      <h2 class="text-xl font-semibold mb-4">Upload Your Song</h2>
-      <div class="space-y-4">
-        <div>
-          <label class="block text-sm font-medium">Song Title</label>
-          <input id="songTitle" type="text" class="mt-1 p-2 w-full border rounded" placeholder="Enter song title">
-        </div>
-        <div>
-          <label class="block text-sm font-medium">Artist</label>
-          <input id="artist" type="text" class="mt-1 p-2 w-full border rounded" placeholder="Enter artist name">
-        </div>
-        <div>
-          <label class="block text-sm font-medium">Song File (MP3)</label>
-          <input id="songFile" type="file" accept="audio/mp3" class="mt-1 p-2 w-full border rounded">
-        </div>
-        <button id="uploadBtn" class="bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600">Upload Song</button>
-      </div>
+  <!-- Main Content -->
+  <div class="container mx-auto pt-24 pb-6 px-6">
+    <!-- Date Selector -->
+    <div class="mb-6">
+      <label class="mr-3 text-teal text-lg font-medium">Select Date:</label>
+      <select id="dateSelector" class="border border-teal rounded-lg px-3 py-2 bg-white text-dark-teal focus:outline-none focus:ring-2 focus:ring-teal">
+        <option value="2025-06-10">2025-06-10</option>
+        <option value="2025-06-11">2025-06-11</option>
+      </select>
     </div>
 
-    <!-- Song List -->
-    <div>
-      <h2 class="text-xl font-semibold mb-4">Available Songs</h2>
-      <div id="songList" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4"></div>
+    <!-- Ticket Status -->
+    <div class="mb-8">
+      <p id="ticketStatus" class="text-lg text-teal font-medium">No ticket purchased.</p>
+      <button id="buyTicketBtn" class="mt-3 bg-teal text-white px-5 py-2 rounded-lg hover:bg-coral btn-bounce transition duration-200">
+        Buy Ticket
+      </button>
     </div>
 
-    <!-- Audio Player -->
-    <div id="audioPlayer" class="fixed bottom-0 left-0 right-0 bg-gray-800 text-white p-4 hidden">
-      <h3 id="currentSongInfo" class="text-lg font-medium"></h3>
-      <audio id="audio" controls class="w-full mt-2"></audio>
-    </div>
+    <!-- Events List -->
+    <div id="eventsContainer" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
+
+    <!-- About Section -->
+    <section id="about" class="mt-12">
+      <h2 class="text-2xl font-bold gradient-text">About EventPass</h2>
+      <p class="mt-4 text-dark-teal">EventPass brings local events to life with a single ticket for multiple experiences in one day. Discover, attend, and enjoy with ease!</p>
+    </section>
   </div>
 
   <script>
-    // Firebase Configuration (Replace with your Firebase project config)
+    // Firebase configuration
     const firebaseConfig = {
-      apiKey: "YOUR_API_KEY",
-      authDomain: "YOUR_AUTH_DOMAIN",
-      projectId: "YOUR_PROJECT_ID",
-      storageBucket: "YOUR_STORAGE_BUCKET",
-      messagingSenderId: "YOUR_MESSAGING_SENDER_ID",
-      appId: "YOUR_APP_ID"
+      apiKey: "AIzaSyBKiLSA6YmVksZsoZmLUUyBZEyGzBKW1Xw",
+      authDomain: "sample-firebase-ai-app-46d10.firebaseapp.com",
+      projectId: "sample-firebase-ai-app-46d10",
+      storageBucket: "sample-firebase-ai-app-46d10.firebasestorage.app",
+      messagingSenderId: "144964562783",
+      appId: "1:144964562783:web:65775f19ec3029eed5d0ea"
     };
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
-    const storage = firebase.storage();
+    const database = firebase.database();
 
-    // DOM Elements
-    const signInBtn = document.getElementById('signInBtn');
-    const signOutBtn = document.getElementById('signOutBtn');
-    const userInfo = document.getElementById('userInfo');
-    const uploadSection = document.getElementById('uploadSection');
-    const songTitle = document.getElementById('songTitle');
-    const artist = document.getElementById('artist');
-    const songFile = document.getElementById('songFile');
-    const uploadBtn = document.getElementById('uploadBtn');
-    const songList = document.getElementById('songList');
-    const audioPlayer = document.getElementById('audioPlayer');
-    const audio = document.getElementById('audio');
-    const currentSongInfo = document.getElementById('currentSongInfo');
+    // Generate a simple session-based user ID (for demo, no auth)
+    const userId = 'user_' + Math.random().toString(36).substr(2, 9);
 
-    // Authentication State
-    auth.onAuthStateChanged((user) => {
-      if (user) {
-        userInfo.textContent = `Signed in as ${user.displayName}`;
-        signInBtn.classList.add('hidden');
-        signOutBtn.classList.remove('hidden');
-        uploadSection.classList.remove('hidden');
-      } else {
-        userInfo.textContent = '';
-        signInBtn.classList.remove('hidden');
-        signOutBtn.classList.add('hidden');
-        uploadSection.classList.add('hidden');
-      }
+    // Elements
+    const dateSelector = document.getElementById('dateSelector');
+    const ticketStatus = document.getElementById('ticketStatus');
+    const buyTicketBtn = document.getElementById('buyTicketBtn');
+    const eventsContainer = document.getElementById('eventsContainer');
+    const navToggle = document.getElementById('navToggle');
+    const navMenu = document.getElementById('navMenu');
+
+    // Toggle mobile menu
+    navToggle.addEventListener('click', () => {
+      navMenu.classList.toggle('open');
     });
 
-    // Sign in with Google
-    signInBtn.addEventListener('click', () => {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      auth.signInWithPopup(provider).catch((error) => {
-        console.error('Sign-in error:', error);
-        alert('Failed to sign in.');
-      });
-    });
-
-    // Sign out
-    signOutBtn.addEventListener('click', () => {
-      auth.signOut().catch((error) => {
-        console.error('Sign-out error:', error);
-        alert('Failed to sign out.');
-      });
-    });
-
-    // Fetch and display songs
-    function loadSongs() {
-      db.collection('songs').orderBy('timestamp', 'desc').get().then((snapshot) => {
-        songList.innerHTML = '';
-        snapshot.forEach((doc) => {
-          const song = doc.data();
-          const songCard = document.createElement('div');
-          songCard.className = 'p-4 bg-white rounded-lg shadow';
-          songCard.innerHTML = `
-            <h3 class="text-lg font-medium">${song.title}</h3>
-            <p class="text-gray-600">${song.artist}</p>
-            <button class="play-btn mt-2 bg-green-500 text-white px-4 py-2 rounded hover:bg-green-600" data-url="${song.url}" data-title="${song.title}" data-artist="${song.artist}">Play</button>
-          `;
-          songList.appendChild(songCard);
-        });
-
-        // Add play button listeners
-        document.querySelectorAll('.play-btn').forEach((btn) => {
-          btn.addEventListener('click', () => {
-            const url = btn.getAttribute('data-url');
-            const title = btn.getAttribute('data-title');
-            const artist = btn.getAttribute('data-artist');
-            audio.src = url;
-            currentSongInfo.textContent = `${title} - ${artist}`;
-            audioPlayer.classList.remove('hidden');
-            audio.play();
+    // Load events for selected date
+    function loadEvents(date) {
+      const eventsRef = database.ref('events').orderByChild('date').equalTo(date);
+      eventsRef.once('value', (snapshot) => {
+        eventsContainer.innerHTML = '';
+        const events = snapshot.val();
+        if (events) {
+          let delay = 0;
+          Object.keys(events).forEach((key) => {
+            const event = events[key];
+            const eventCard = `
+              <div class="event-card bg-event-card p-5 rounded-lg shadow-md border border-teal slide-in" style="animation-delay: ${delay}s">
+                <h3 class="text-xl font-semibold gradient-text">${event.name}</h3>
+                <p class="text-dark-teal">Time: ${event.time}</p>
+                <p class="text-dark-teal">Location: ${event.location}</p>
+                <p class="text-dark-teal">Price: R${event.price}</p>
+                <button onclick="useTicket('${key}')" class="mt-3 bg-teal text-white px-4 py-2 rounded-lg hover:bg-coral btn-bounce transition duration-200 use-ticket-btn" data-event-id="${key}" disabled>
+                  Use Ticket
+                </button>
+              </div>`;
+            eventsContainer.innerHTML += eventCard;
+            delay += 0.15; // Staggered animation
           });
-        });
-      }).catch((error) => {
-        console.error('Error fetching songs:', error);
+        } else {
+          eventsContainer.innerHTML = `<p class="text-dark-teal">No events found for ${date}</p>`;
+        }
+        updateTicketButtons(date);
       });
     }
 
-    // Load songs on page load
-    loadSongs();
+    // Check ticket status and enable/disable buttons
+    function updateTicketButtons(date) {
+      const ticketRef = database.ref(`tickets/${userId}/${date}`);
+      ticketRef.once('value', (snapshot) => {
+        const ticket = snapshot.val();
+        if (ticket && !ticket.used) {
+          ticketStatus.textContent = `Ticket for ${date}: Active`;
+          document.querySelectorAll('.use-ticket-btn').forEach(btn => btn.disabled = false);
+        } else if (ticket && ticket.used) {
+          ticketStatus.textContent = `Ticket for ${date}: Expired`;
+          document.querySelectorAll('.use-ticket-btn').forEach(btn => btn.disabled = true);
+        } else {
+          ticketStatus.textContent = 'No ticket purchased.';
+          document.querySelectorAll('.use-ticket-btn').forEach(btn => btn.disabled = true);
+        }
+      });
+    }
 
-    // Upload song
-    uploadBtn.addEventListener('click', async () => {
-      if (!songTitle.value || !artist.value || !songFile.files[0]) {
-        alert('Please fill in all fields and select an MP3 file.');
-        return;
-      }
-
-      if (songFile.files[0].type !== 'audio/mpeg') {
-        alert('Please select an MP3 file.');
-        return;
-      }
-
-      try {
-        // Upload file to Firebase Storage
-        const storageRef = storage.ref(`songs/${Date.now()}-${songFile.files[0].name}`);
-        const snapshot = await storageRef.put(songFile.files[0]);
-        const url = await snapshot.ref.getDownloadURL();
-
-        // Save metadata to Firestore
-        await db.collection('songs').add({
-          title: songTitle.value,
-          artist: artist.value,
-          url: url,
-          timestamp: firebase.firestore.FieldValue.serverTimestamp()
+    // Purchase ticket
+    function buyTicket() {
+      const date = dateSelector.value;
+      const ticketRef = database.ref(`tickets/${userId}/${date}`);
+      ticketRef.once('value', (snapshot) => {
+        if (snapshot.exists() && !snapshot.val().used) {
+          alert('You already have a valid ticket for this date!');
+          return;
+        }
+        const eventsRef = database.ref('events').orderByChild('date').equalTo(date);
+        eventsRef.once('value', (snapshot) => {
+          const events = snapshot.val() || {};
+          ticketRef.set({
+            date: date,
+            used: false,
+            events: Object.keys(events)
+          }).then(() => {
+            alert(`Ticket purchased for ${date}!`);
+            updateTicketButtons(date);
+          });
         });
+      });
+    }
 
-        // Clear form
-        songTitle.value = '';
-        artist.value = '';
-        songFile.value = '';
-        alert('Song uploaded successfully!');
-        loadSongs(); // Refresh song list
-      } catch (error) {
-        console.error('Upload error:', error);
-        alert('Failed to upload song.');
-      }
+    // Use ticket
+    function useTicket(eventId) {
+      const date = dateSelector.value;
+      const ticketRef = database.ref(`tickets/${userId}/${date}`);
+      ticketRef.once('value', (snapshot) => {
+        const ticket = snapshot.val();
+        if (!ticket || ticket.used) {
+          alert('No valid ticket or ticket already used!');
+          return;
+        }
+        ticketRef.update({ used: true }).then(() => {
+          alert(`Ticket used for event ${eventId}. Ticket is now expired.`);
+          updateTicketButtons(date);
+        });
+      });
+    }
+
+    // Event listeners
+    dateSelector.addEventListener('change', () => {
+      loadEvents(dateSelector.value);
     });
+    buyTicketBtn.addEventListener('click', buyTicket);
+
+    // Initial load
+    loadEvents(dateSelector.value);
+
+    // Seed initial data (run once, then comment out)
+    /*
+    database.ref('events').set({
+      event1: { name: "Music Festival", date: "2025-06-10", time: "18:00", location: "City Park", price: 350 },
+      event2: { name: "Art Exhibition", date: "2025-06-10", time: "14:00", location: "Downtown Gallery", price: 250 },
+      event3: { name: "Food Fair", date: "2025-06-10", time: "12:00", location: "Main Square", price: 180 },
+      event4: { name: "Comedy Night", date: "2025-06-11", time: "20:00", location: "Local Theater", price: 400 }
+    });
+    */
   </script>
 </body>
 </html>
