--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
       <div id="navMenu" class="nav-menu hidden md:flex space-x-6 items-center">
         <a href="#" class="hover:text-coral transition duration-200">Home</a>
         <a href="#eventsContainer" class="hover:text-coral transition duration-200">Events</a>
+         <a href="#about" class="hover:text-coral transition duration-200">Organiser</a>
         <a href="#about" class="hover:text-coral transition duration-200">About</a>
       </div>
     </div>
